src/test/deca/context/valid/provided/test_error_methodIdent.deca
class A{
    int x;
    int getA(){
        return x;
    }
}

{
    A a = new A();
    
}