src/test/deca/context/invalid/provided/void-return.deca
class A{
    protected int x;
    int y;

    void getX(){
        return x;
    }

}


{
    A a = new A();
}